hphp/hack/test/typecheck/new_inference/transitive_error_3.php.exp
File "transitive_error_3.php", line 18, characters 10-11:
Invalid return type (Typing[4110])
File "transitive_error_3.php", line 10, characters 17-22:
This is a string
File "transitive_error_3.php", line 14, characters 22-24:
It is incompatible with an int
